# logr

./: .gitignore  CLAUDE.md  Dockerfile  README.md  logr_client.py  pyproject.toml  railway.toml  requirements.txt
app/: __init__.py  auth.py  config.py  database.py  embeddings.py  main.py  middleware.py  models.py  search_engine.py
app/routers/: admin.py  logs.py  search.py  spans.py
logr-ui/: .env.local.example  package-lock.json  package.json  tailwind.config.ts
logr-ui/src/app/: globals.css  layout.tsx
logr-ui/src/app/(dashboard)/: layout.tsx  page.tsx
logr-ui/src/app/(dashboard)/admin/: page.tsx
logr-ui/src/app/(dashboard)/anomalies/: page.tsx
logr-ui/src/app/(dashboard)/logs/: client.tsx  page.tsx
logr-ui/src/app/(dashboard)/search/: actions.ts  client.tsx  page.tsx
logr-ui/src/app/(dashboard)/settings/: page.tsx
logr-ui/src/app/(dashboard)/stats/: actions.ts  client.tsx  page.tsx
logr-ui/src/app/(dashboard)/traces/: actions.ts  client.tsx  page.tsx
logr-ui/src/app/actions/: auth.ts
logr-ui/src/components/: app-sidebar.tsx
logr-ui/src/components/auth/: login-form.tsx
logr-ui/src/lib/: logr.ts  utils.ts
logr-ui/src/lib/supabase/: middleware.ts  server.ts
tests/: conftest.py  test_admin.py  test_auth.py  test_embeddings.py  test_health.py  test_logs.py  test_search.py  test_spans.py
